# AndroCL

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/assets/: orb.cl
app/src/main/cpp/: androcl.cpp  custom_hal.hpp  cvconfig.h  imgprocessor.cpp  imgprocessor.h  opencv_modules.hpp
app/src/main/cpp/include/: calib3d.cpp  core.cpp  cvconfig.h  features2d.cpp  imgcodecs.cpp  imgproc.cpp  ml.cpp  objdetect.cpp  photo.cpp  video.cpp  videoio.cpp
app/src/main/cpp/include/opencv2/: cvconfig.h  opencv_modules.hpp
app/src/main/cpp/include/opencv2/calib3d/: calib3d.hpp
app/src/main/cpp/include/opencv2/core/: core.hpp  cvdef.h  private.hpp
app/src/main/cpp/include/opencv2/core/opencl/: opencl_svm.hpp
app/src/main/cpp/include/opencv2/features2d/: features2d.hpp
app/src/main/cpp/include/opencv2/flann/: flann.hpp
app/src/main/cpp/opencv2/: cpp.txt  cvconfig.h  out.txt
app/src/main/cpp/opencv2/core/include/opencv2/core/: ocl.hpp  private.cuda.hpp  private.hpp
app/src/main/cpp/opencv2/core/src/: hal_replacement.hpp  persistence.cpp  version_string.inc
app/src/main/cpp/opencv2/features2d/perf/: sdfsdf
app/src/main/cpp/opencv2/features2d/src/: orb.cpp
app/src/main/cpp/opencv2/imgproc/src/: hal_replacement.hpp
app/src/main/java/com/example/linuxdev/myapplication/: MainActivity.java
app/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
app/src/main/java/org/opencv/ml/: EM.java  RTrees.java
